# hiring-assistant-chatbot

./: .dockerignore  Dockerfile  README.md  api_reference.rst  pyproject.toml  requirements.txt
scripts/: decrypt_database.py  generate_key.py
src/: app.py
src/core/: conversation_manager.py  data_validator.py  database_manager.py  encryption_handler.py  model_manager.py
tests/scripts/: test_decrypt_database.py  test_generate_key.py
tests/src/: test_app.py
tests/src/core/: test_conversation_manager.py  test_data_validator.py  test_database_manager.py  test_encryption_handler.py  test_model_manager.py
