[project]
name = "hiring-assistant-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "loguru>=0.7.3",
    "phonenumbers>=9.0.12",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.0",
]
