[project]
name = "hiring-assistant-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.6",
    "email-validator>=2.3.0",
    "loguru>=0.7.3",
    "openai>=1.102.0",
    "phonenumbers>=9.0.12",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.0",
]
